maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:33: error: not found: value mur
  mur=estFaceMur()
  ^WallFollowerMaze:35: error: not found: value mur
  return mur
         ^