maze.wallfollower.WallFollowerMaze.scala.code
override def run() 
{
  while(!porteBiscuit())
  {
    keepHandOnSideWall()
  }
}

def keepHandOnSideWall()
{
  if(!estFaceMur())
  	{
  		if(murGauche())
  			{
      		avance()
    		}
      else
      	{
          droite()
        }
    }
  else
  	{
      droite()
    }
  
}


def murGauche():Boolean=
{
  gauche()
  mur=estFaceMur()
  droite()
  return mur
}